--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 随风枫叶
 subtitle:
 description:
 keywords:
-author: John Doe
+author: jianfeng huang
 language:
 timezone:
 
