--- a/themes/anodyne/_config.yml
+++ b/themes/anodyne/_config.yml
@@ -13,7 +13,7 @@ menu:
   标签: /tags
   分类: /categories
   关于: /about.html
-  联系方式: /contact.html
+  # 联系方式: /contact.html
 
 # Post
 default_post_title: Untitled
