--- a/_config.yml
+++ b/_config.yml
@@ -81,3 +81,10 @@ deploy:
   type: git
   repo: git@github.com:suifengfengye/suifengfengye.github.io.git
   branch: master
+
+# mermaid chart
+mermaid: ## mermaid url https://github.com/knsv/mermaid
+  enable: true  # default true
+  version: "7.1.2" # default v7.1.2
+  options:  # find more api options from https://github.com/knsv/mermaid/blob/master/src/mermaidAPI.js
+    #startOnload: true  // default true
