--- a/themes/anodyne/_config.yml
+++ b/themes/anodyne/_config.yml
@@ -25,7 +25,7 @@ archive_font_awesome_icon_css: fa-folder-open
 
 # About Widget
 about_widget_avatar_url: https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1543393359754&di=98b179b898c6079686c30465812d3c54&imgtype=0&src=http%3A%2F%2Fimg3.kuwo.cn%2Fstar%2Fuserhead%2F49%2F84%2F1473703627587_232693149.jpg
-about_widget_text: "这是我的个人博客.testing<br>"
+about_widget_text: "这是我的个人博客<br>"
 
 
 # Comments.
